--- a/README
+++ b/README
@@ -5,3 +5,9 @@ gcloud auth configure-docker us-east4-docker.pkg.dev
 docker tag
 docker push
 gcloud run deploy hello-world-service --image YOUR_REGION-docker.pkg.dev/YOUR_PROJECT_ID/YOUR_REPO_NAME/hello-world:latest --platform managed --region YOUR_REGION
+
+
+To-Do:
+- connect to open-source golf data source
+- add scrollbar to generated output
+- content fits a fixed box. If more text than size of box, add scrollbar inside
